test/grammar/types/var_type_annotation/type_fail_15/stderr.golden
error[E2G22]: TypeError
  --> ${CWD}/main.k:20:7
   |
20 |     **config
   |       ^ expected str, got int
   |

  --> ${CWD}/main.k:13:5
   |
13 |     name: str
   |     ^ variable is defined here, its type is str, but got int
   |

 --> ${CWD}/main.k:2:5
  |
2 |     name = 1
  |     ^ config attribute is defined here
  |

error[E2G22]: TypeError
  --> ${CWD}/main.k:20:7
   |
20 |     **config
   |       ^ expected str, got int
   |

  --> ${CWD}/main.k:17:5
   |
17 |     name: str
   |     ^ variable is defined here, its type is str, but got int
   |

 --> ${CWD}/main.k:4:9
  |
4 |         name = 1
  |         ^ config attribute is defined here
  |